Add result text view

--- a/FuriganaConverter/Base.lproj/Localizable.strings
+++ b/FuriganaConverter/Base.lproj/Localizable.strings
@@ -9,3 +9,4 @@
 "Convert" = "Convert";
 "Type the text to translate" = "Type the text to translate";
 "Clear" = "Clear";
+"Converting result" = "Converting result";
