Add a segmented control for the output type

--- a/FuriganaConverter/Base.lproj/Localizable.strings
+++ b/FuriganaConverter/Base.lproj/Localizable.strings
@@ -10,3 +10,5 @@
 "Type the text to translate" = "Type the text to translate";
 "Clear" = "Clear";
 "Converting result" = "Converting result";
+"hinagara" = "hinagara";
+"katakana" = "katakana";
