--- a/FuriganaConverter/ja.lproj/Localizable.strings
+++ b/FuriganaConverter/ja.lproj/Localizable.strings
@@ -10,3 +10,5 @@
 "Type the text to translate" = "変換する内容を入力";
 "Clear" = "消去";
 "Converting result" = "変換結果";
+"hinagara" = "ひながら";
+"katakana" = "カタカナ";
