Add a loading state for the result view

--- a/FuriganaConverter/Base.lproj/Localizable.strings
+++ b/FuriganaConverter/Base.lproj/Localizable.strings
@@ -9,6 +9,6 @@
 "Convert" = "Convert";
 "Type the text to translate" = "Type the text to translate";
 "Clear" = "Clear";
-"Converting result" = "Converting result";
 "hinagara" = "hinagara";
 "katakana" = "katakana";
+"Converting..." = "Converting...";
