--- a/FuriganaConverter/ja.lproj/Localizable.strings
+++ b/FuriganaConverter/ja.lproj/Localizable.strings
@@ -9,6 +9,6 @@
 "Convert" = "変換";
 "Type the text to translate" = "変換する内容を入力";
 "Clear" = "消去";
-"Converting result" = "変換結果";
 "hinagara" = "ひながら";
 "katakana" = "カタカナ";
+"Converting..." = "変換中...";
