Create the setting view

--- a/FuriganaConverter/Base.lproj/Localizable.strings
+++ b/FuriganaConverter/Base.lproj/Localizable.strings
@@ -22,3 +22,7 @@
 "Cancel" = "Cancel";
 "Retry" = "Retry";
 "Later" = "Later";
+"Settings" = "Settings";
+"Show Keyboard Automatically" = "Show Keyboard Automatically";
+"Clear History" = "Clear History";
+"Acknowledgements" = "Acknowledgements";
