--- a/FuriganaConverter/ja.lproj/Localizable.strings
+++ b/FuriganaConverter/ja.lproj/Localizable.strings
@@ -22,3 +22,7 @@
 "Cancel" = "キャンセル";
 "Retry" = "再試行";
 "Later" = "あとで";
+"Settings" = "設定";
+"Show Keyboard Automatically" = "キーボードの自動表示";
+"Clear History" = "履歴を削除";
+"Acknowledgements" = "謝辞";
