Implement clear history function

--- a/FuriganaConverter/Base.lproj/Localizable.strings
+++ b/FuriganaConverter/Base.lproj/Localizable.strings
@@ -26,3 +26,4 @@
 "Show Keyboard Automatically" = "Show Keyboard Automatically";
 "Clear History" = "Clear History";
 "Acknowledgements" = "Acknowledgements";
+"Clear Failed" = "Clear Failed";
