--- a/FuriganaConverter/ja.lproj/Localizable.strings
+++ b/FuriganaConverter/ja.lproj/Localizable.strings
@@ -24,5 +24,6 @@
 "Later" = "あとで";
 "Settings" = "設定";
 "Show Keyboard Automatically" = "キーボードの自動表示";
-"Clear History" = "履歴を削除";
+"Clear History" = "履歴を消去";
 "Acknowledgements" = "謝辞";
+"Clear Failed" = "消去に失敗しました";
